# dna-to-music-v2

./: .gitignore  DNA_Sonification_Kural_Sistemi_V1_2.docx.txt  README.md  conductor.pt  documentation.md  explanation.md  final_report_documentation.md  presentation_slides.md  pyproject.toml  selfmadeproject.md  tr_explain.md
data/: mutated_human.fasta  normal_human.fasta
data/classical/: airdsAirs_book4.mid  mozart_k155_movement1.mid  mozart_k155_movement2.mid  mozart_k155_movement3.mid  mozart_k156_movement1.mid  mozart_k156_movement2.mid  mozart_k156_movement3.mid  mozart_k156_movement4.mid  mozart_k458_movement3.mid  mozart_k458_movement4.mid  mozart_k545_movement1_exposition.mid  mozart_k80_movement1.mid  mozart_k80_movement2.mid  mozart_k80_movement3.mid  mozart_k80_movement4.mid
data/seq2seq/dna/: dna_0000.txt  dna_0001.txt  dna_0002.txt  dna_0003.txt  dna_0004.txt  dna_0005.txt  dna_0006.txt  dna_0007.txt  dna_0008.txt  dna_0009.txt  dna_0010.txt  dna_0011.txt  dna_0012.txt  dna_0013.txt  dna_0014.txt  dna_0015.txt  dna_0016.txt  dna_0017.txt  dna_0018.txt  dna_0019.txt  dna_0020.txt  dna_0021.txt  dna_0022.txt  dna_0023.txt  dna_0024.txt  dna_0025.txt  dna_0026.txt  dna_0027.txt  dna_0028.txt  (+971 more)
future_work_tests/: test_rl.py.bak
scratch/: check_corpus.py  debug.py  debug_encoder.py  debug_entropy.py  generate_and_eval.py  generate_dna.py
src/dna_sonifier/: __init__.py  bach_lstm.py  bio_encoder.py  cli.py  conductor.py  evaluate.py  ncbi.py  sonifier.py  tokenizer.py  train_bach_melody.py  train_conductor.py
tests/: test_ai.py  test_sonifier.py
(+1000 files in other folders)
