[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dna-sonifier"
version = "0.1.0"
description = "Deterministic DNA sonification for solo piano using music21 and NCBI data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.84",
    "music21>=9.3",
    "torch>=2.2",
    "transformers>=4.38",
    "tqdm>=4.66",
]

[project.scripts]
dna-sonify = "dna_sonifier.cli:main"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

